istio/routing-rules/reviews-blue-green.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - weight: 3
      destination:
        host: reviews
        subset: blue
    - weight: 1000
      destination:
        host: reviews
        subset: green
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - name: blue
    labels:
      version: v1
  - name: green
    labels:
      version: v2
